# MarketPredictionTool

./: CMakeLists.txt  LICENSE  Makefile  README.md  analyses.json  build.sh  build_server.bat  build_server.ps1  build_server.sh  erklaerung.txt  fix_analyses.py  fuckfinazamt.txt  implementation_plan.md  math_explanation.md  predict_app  predict_server  settings.json  task.md  test_runner  walkthrough.md
public/: app.js  index.html  quantum.html  sentiment.css  style.css
scripts/: ml_predict.py
src/: analysis.cpp  analysis.hpp  analysis_storage.cpp  analysis_storage.hpp  main.cpp  market_data.cpp  market_data.hpp  news_fetcher.cpp  news_fetcher.hpp  ollama_client.cpp  ollama_client.hpp  server.cpp  settings_storage.cpp  settings_storage.hpp  test_analysis.cpp
